Leave TODO in HTML nav

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
     <!--TODO efekt na przyciski w menu: podświetlone tło w kwadracie (wzór starego biosa)-->
+    <!--TODO usunąć niepotrzebne klasy? nav__mobile nav__desktop-->
     <nav class="nav">
         <a class="nav__brand" href="#"> &lt;jeska/&gt; </a>
         <div class="nav__mobile nav__desktop">
