Change conception of header - finish for mobile

--- a/index.html
+++ b/index.html
@@ -75,61 +75,29 @@
             </div>
         </div>
         <div class="header__box">
-            <div class="header__box-bar">
-                <div class="header__box-bar__page-name">
-                    <p>README.md</p>
+            <div class="header__box-text">
+                <p class="custom-p">Hello there!</p>
+                <p class="welcome-text">My name is Agnes and I would like to</p>
+                <div class="header__box-title">
+                    <p class="header__box-title-element">[</p>
+                    <h1 class="typewriter-text">create breathtaking websites and apps!</h1>
+                    <p class="header__box-title-element">]</p>
                 </div>
-                <div class="header__box-bar__options">
-                    <span class="bar-option"></span>
-                    <img class="bar-option" src="img/icons/square.svg" alt="">
-                    <img class="bar-option" src="img/icons/x.svg" alt="">
-                </div>
+                <!--TODO efekt wpisywanego tekstu-->
+                <!-- start as Frontend Developer, be your employee, become Fullstack Developer, create breathtaking websites and apps!, get know more technologies -->
             </div>
-            <div class="header__box-page">
-                <div class="header__box-page-text">
-                    <p class="welcome-text">Hello there!</p>
-                    <p class="welcome-text">My name is Agnes and I would like to</p>
-                    <h1 class="header__box-page-text-title">[ <span class="typing__text-animation">
-                        </span><span class="typing__blinking-cursor"></span> ]</h1>
-                    <!--TODO efekt wpisywanego tekstu-->
-                    <!-- start as Frontend Developer, be your employee, become Fullstack Developer, create breathtaking websites and apps!, get know more technologies -->
-                </div>
-                <div class="header__box-page-socialmedia">
-
-                </div>
+            <div class="header__box-socialmedia">
+                <a class="socialmedia-link" href="https://www.facebook.com/agni.jezierska/" target="_blank"><img src="img/icons/facebook.svg" alt="Facebook"></a>
+                <a class="socialmedia-link" href="https://www.linkedin.com/in/agni-jezierska/" target="_blank"><img src="img/icons/linkedin.svg" alt="Linkedin"></a>
+                <a class="socialmedia-link" href="https://github.com/Saminai" target="_blank"><img src="img/icons/github.svg" alt="Github"></a>
+                <a class="socialmedia-link" href="https://twitter.com/xSamiNai" target="_blank"><img src="img/icons/brand-x.svg" alt="Twitter"></a>
             </div>
         </div>
-        <div class="header__box header__box-extra">
-            <div class="header__box-bar">
-                <div class="header__box-bar__page-name">
-                    <p class="page-name">VSCode - index.html</p>
-                </div>
-                <div class="header__box-bar__options">
-                    <span class="bar-option"></span>
-                    <img class="bar-option" src="img/icons/square.svg" alt="">
-                    <img class="bar-option" src="img/icons/x.svg" alt="">
-                </div>
+        <a href="#about">
+            <div class="header__arrow">
+                <img class="header__arrow-icon" src="img/icons/chevron-down.svg" alt="">
             </div>
-            <div class="header__box-page">
-                <img class="header__box-page-img" src="img/header-vsc.jpg" alt="">
-            </div>
-        </div>
-        <div class="header__box header__box-extra">
-            <div class="header__box-bar">
-                <div class="header__box-bar__page-name">
-                    <img src="img/icons/terminal.svg" alt="Terminal icon">
-                    <p class="page-name">Terminal</p>
-                </div>
-                <div class="header__box-bar__options">
-                    <span class="bar-option"></span>
-                    <img class="bar-option" src="img/icons/square.svg" alt="">
-                    <img class="bar-option" src="img/icons/x.svg" alt="">
-                </div>
-            </div>
-            <div class="header__box-page">
-                <img class="header__box-page-img" src="img/header-terminal.png" alt="Open window with terminal">
-            </div>
-        </div>
+        </a>
     </header>
 
 
