Finish tablet and desktop RWD header section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="header__box">
             <div class="header__box-text">
-                <p class="custom-p">Hello there!</p>
+                <p class="welcome-custom">Hello there!</p>
                 <p class="welcome-text">My name is Agnes and I would like to</p>
                 <div class="header__box-title">
                     <p class="header__box-title-element">[</p>
