--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 <body>
     <nav class="nav">
         <div class="nav__brand">
-            <a class="nav__brand-logo" href="#">&lt;jeska/&gt;</a>
+            <a class="nav__brand-logo" href="#">&lt;Jeska/&gt;</a>
             <p class="nav__brand-slogan">portfolio of Full Stack Developer</p>
         </div>
         <div class="nav__mobile nav__desktop">
-            <a class="nav__item" href="#about">about( )</a>
-            <a class="nav__item" href="#projects">projects( )</a>
+            <a class="nav__item" href="#about">#about</a>
+            <a class="nav__item" href="#projects">#projects</a>
             <a class="nav__item" target="_blank" href="#">blog( )</a>
             <a class="nav__item" target="_blank" href="#">resume( )</a>
-            <a class="nav__item" href="#contact">contact( )</a>
+            <a class="nav__item" href="#contact">#contact</a>
         </div>
     </nav>
 
