Finish abt-me section for mobiles

--- a/index.html
+++ b/index.html
@@ -87,10 +87,14 @@
                 <!-- start as Frontend Developer, be your employee, become Fullstack Developer, create breathtaking websites and apps!, get know more technologies -->
             </div>
             <div class="header__box-socialmedia">
-                <a class="socialmedia-link" href="https://www.facebook.com/agni.jezierska/" target="_blank"><img src="img/icons/facebook.svg" alt="Facebook"></a>
-                <a class="socialmedia-link" href="https://www.linkedin.com/in/agni-jezierska/" target="_blank"><img src="img/icons/linkedin.svg" alt="Linkedin"></a>
-                <a class="socialmedia-link" href="https://github.com/Saminai" target="_blank"><img src="img/icons/github.svg" alt="Github"></a>
-                <a class="socialmedia-link" href="https://twitter.com/xSamiNai" target="_blank"><img src="img/icons/brand-x.svg" alt="Twitter"></a>
+                <a class="socialmedia-link" href="https://www.facebook.com/agni.jezierska/" target="_blank"><img
+                        src="img/icons/facebook.svg" alt="Facebook"></a>
+                <a class="socialmedia-link" href="https://www.linkedin.com/in/agni-jezierska/" target="_blank"><img
+                        src="img/icons/linkedin.svg" alt="Linkedin"></a>
+                <a class="socialmedia-link" href="https://github.com/Saminai" target="_blank"><img
+                        src="img/icons/github.svg" alt="Github"></a>
+                <a class="socialmedia-link" href="https://twitter.com/xSamiNai" target="_blank"><img
+                        src="img/icons/brand-x.svg" alt="Twitter"></a>
             </div>
         </div>
         <a href="#about">
@@ -103,28 +107,12 @@
 
     <main>
         <!--TODO każde h2 ma efekt wpisywania i nie znika tylko już zostaje na stałe, a reszta wjeżdża z boku lub wyświetla się etapami np. po zdaniu z opóźnieniem-->
-        <div class="abt-me" id="about">
-            <div class="wrapper">
+        <div class="wrapper">
+            <div class="abt-me" id="about">
                 <div class="abt-me__text">
-                    <div class="text-title">
-                        <h2>#about</h2>
-                        <div class="text-title__line"></div>
-                    </div>
+
                     <!--TODO ustawić działanie short/long-->
-                    <div class="abt-me__text--short">
-                        <p>I'm like a JavaScript superhero, clad in Tailwind and Bootstrap. Frontend is my kung-fu, but
-                            it's
-                            time to go for backend training and become a full-stack ninja developer. The backend is like
-                            a
-                            magical jutsu whose secrets I want to learn. I'm preparing for this challenge with passion
-                            and
-                            unbridled humour. <br><br>When the backend screams "ERROR!" I respond "Try-catch"! I am
-                            ready
-                            for code adventure that brings full-blown creative madness and a pinch of laughter. Let's
-                            code
-                            the world! 💻🚀😄
-                        </p>
-                        <button class="abt-me__btn">Read more...</button>
+                    <div class="abt-me__text-short ">
                         <div class="abt-me__quote">
                             <!--cudzysłów większy niż tekst, kolor wyszarzały, czcionka pochylona-->
                             <div class="abt-me__quote-quoter">
@@ -138,36 +126,71 @@
                                 <p>"</p>
                             </div>
                         </div>
+
+                        <div class="text-title">
+                            <h2>#about</h2>
+                            <div class="text-title__line"></div>
+                        </div>
+
+                        <p class="abt-me__text-lines">I'm like a JavaScript superhero, clad in Tailwind and Bootstrap.
+                            Frontend is my kung-fu, but
+                            it's
+                            time to go for backend training and become a full-stack ninja developer. The backend is like
+                            a
+                            magical jutsu whose secrets I want to learn. I'm preparing for this challenge with passion
+                            and
+                            unbridled humour. <br><br>When the backend screams "ERROR!" I respond "Try-catch"! I am
+                            ready
+                            for code adventure that brings full-blown creative madness and a pinch of laughter. Let's
+                            code
+                            the world! 💻🚀😄
+                        </p>
+                        <button class="abt-me__text-more-btn">Read more...</button>
                     </div>
-                    <div class="abt-me__text--long">
-                        <p>One fine day, I was scribbling down my carpentry workshop's inventory on a random piece of
+
+
+                    <div class="abt-me__text-long abt-me__text--inactive">
+                        <div class="text-title">
+                            <h2>#about</h2>
+                            <div class="text-title__line"></div>
+                        </div>
+
+                        <p class="abt-me__text-lines"><span>How does it start?</span> One fine day, I was scribbling
+                            down my carpentry workshop's inventory on a random piece of
                             paper,
                             and then it hit me - I need a program for this madness! And so, I decided to embark on the
                             adventure of coding my very own ERP system. And it wasn't a walk in the park, not even a
                             tiny
                             stroll! </p>
-                        <p>So, I took baby steps, almost like I was learning to crawl in the world of coding. I found
+                        <p class="abt-me__text-lines">So, I took baby steps, almost like I was learning to crawl in the
+                            world of coding. I found
                             myself
                             diving into a sea of books, watching tutorials that felt like they were explaining quantum
-                            physics, and even tuning into coding podcasts that spoke in some secret language.. I was
+                            physics, and even tuning into coding podcasts that spoke in some secret language... I was
                             trying
                             to tackle more challenging ideas, and gradually, coding became more and more fun.
                         </p>
-                        <p>Back when I was young (which feels like eons ago), I was a bit like a lost puppy in a maze of
+                        <p class="abt-me__text-lines">Back when I was young (which feels like eons ago), I was a bit
+                            like a lost puppy in a maze of
                             future career plans. I had no idea who I wanted to be when I'll grow up. I searched high and
                             low,
                             but eventually, I stumbled upon something that truly lit a fire in me.
                         </p>
-                        <p>I mean, sure, I could've been a logistician, an architect, or even a hipster artist sipping
+                        <p class="abt-me__text-lines">I mean, sure, I could've been a logistician, an architect, or even
+                            a hipster artist sipping
                             soy
                             lattes at a trendy cafe, but as a programmer, I discovered I could work in any field. It's a
                             flexible world where you can gain knowledge in just about any category. Now, my dream is
                             crystal
                             clear, and one day, mark my words, I'll be a Fullstack Developer!</p>
-                        <button class="abt-me__btn">Read less...</button>
+                        <button class="abt-me__text-less-btn">Read less...</button>
                     </div>
                 </div>
-                <div class="abt-me__img"></div>
+
+                <!-- TODO zmiana zdjęcia, dostosowanie go i dodanie elementów ozdobnych! -->
+                <div class="abt-me__img">
+                    <img src="./img/coffee-me.jpg" alt="Photo of portfolio author">
+                </div>
             </div>
         </div>
 
