Finish abt-me section for desktops

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="abt-me__text">
 
                     <!--TODO ustawić działanie short/long-->
-                    <div class="abt-me__text-short ">
+                    <div class="abt-me__text-short">
                         <div class="abt-me__quote">
                             <!--cudzysłów większy niż tekst, kolor wyszarzały, czcionka pochylona-->
                             <div class="abt-me__quote-quoter">
@@ -131,7 +131,6 @@
                             <h2>#about</h2>
                             <div class="text-title__line"></div>
                         </div>
-
                         <p class="abt-me__text-lines">I'm like a JavaScript superhero, clad in Tailwind and Bootstrap.
                             Frontend is my kung-fu, but
                             it's
@@ -147,14 +146,11 @@
                         </p>
                         <button class="abt-me__text-more-btn">Read more...</button>
                     </div>
-
-
                     <div class="abt-me__text-long abt-me__text--inactive">
                         <div class="text-title">
                             <h2>#about</h2>
                             <div class="text-title__line"></div>
                         </div>
-
                         <p class="abt-me__text-lines"><span>How does it start?</span> One fine day, I was scribbling
                             down my carpentry workshop's inventory on a random piece of
                             paper,
@@ -186,8 +182,6 @@
                         <button class="abt-me__text-less-btn">Read less...</button>
                     </div>
                 </div>
-
-                <!-- TODO zmiana zdjęcia, dostosowanie go i dodanie elementów ozdobnych! -->
                 <div class="abt-me__img">
                     <img src="./img/coffee-me.jpg" alt="Photo of portfolio author">
                 </div>
@@ -223,7 +217,7 @@
         <div class="skills">
             <div class="wrapper">
                 <div class="text-title">
-                    <h2>#Skills</h2>
+                    <h2>#skills</h2>
                     <div class="text-title__line"></div>
                 </div>
                 <div class="skills-boxes">
