Finish exp section - mobile and desktop - HTML/SCSS

--- a/index.html
+++ b/index.html
@@ -189,7 +189,6 @@
         </div>
 
 
-        <!-- TODO ustawić kolor wyszarzały tekstu, czcionka chakra petch? -->
         <div class="exp">
             <div class="wrapper">
                 <div class="exp-road">
@@ -197,15 +196,15 @@
                         <h5>2023</h5>
                         <p>Started my journey</p>
                     </div>
-                    <div class="exp-road exp-road__line"></div>
+                    <div class="exp-road__line"></div>
                     <div class="exp-road__text">
                         <h5>2024</h5>
                         <p>Shared my portfolio to the world</p>
                     </div>
-                    <div class="exp-road exp-road__line"></div>
+                    <div class="exp-road__line"></div>
                     <div class="exp-road__text">
                         <h5>2025</h5>
-                        <p>Sent my first resume</p>
+                        <p>Looking for my dream work!</p>
                     </div>
                 </div>
             </div>
@@ -222,7 +221,7 @@
                 </div>
                 <div class="skills-boxes">
                     <div class="skills-boxes__tech">
-                        <h3>Technologies:</h3>
+                        <h3 class="skills-boxes-title">Technologies:</h3>
                         <div class="skills-boxes__tech-list">
                             <p>I work with</p>
                             <div class="tech-imgs"></div>
@@ -238,7 +237,7 @@
                     </div>
                     <!--TODO lista wjeżdża pojedyńczo-->
                     <div class="skills-boxes__soft">
-                        <h3>Soft skills:</h3>
+                        <h3 class="skills-boxes-title">Soft skills:</h3>
                         <ul>
                             <li>communicative person</li>
                             <li>accuracy and insight with curiosity</li>
