--- a/index.html
+++ b/index.html
@@ -238,10 +238,12 @@
                     <!--TODO lista wjeżdża pojedyńczo-->
                     <div class="skills-boxes__soft">
                         <h3 class="skills-boxes-title">Soft skills:</h3>
-                        <ul>
+                        <ul class="skills-boxes__soft-list">
                             <li>communicative person</li>
                             <li>accuracy and insight with curiosity</li>
                             <li>perseverance in the face of a problem</li>
+                        </ul>
+                        <ul class="skills-boxes__soft-list">
                             <li>teamwork</li>
                             <li>the artist's soul</li>
                             <li>willingness to learn new things</li>
