Finish skills section - mobile and desktop

--- a/index.html
+++ b/index.html
@@ -220,25 +220,43 @@
                     <div class="text-title__line"></div>
                 </div>
                 <div class="skills-boxes">
+                    <h3 class="skills-boxes-title">Technologies:</h3>
                     <div class="skills-boxes__tech">
-                        <h3 class="skills-boxes-title">Technologies:</h3>
                         <div class="skills-boxes__tech-list">
                             <p>I work with</p>
-                            <div class="tech-imgs"></div>
+                            <div class="skills-boxes__tech-imgs">
+                                <img src="./img/technologies/sass.svg" alt="Sass-icon">
+                                <img src="./img/technologies/bootstrap.svg" alt="Bootstrap icon">
+                                <img src="./img/technologies/tailwind.svg" alt="Tailwindcss icon">
+                                <img src="./img/technologies/javascript.svg" alt="JavaScript icon">
+                                <img src="./img/technologies/nodejs.svg" alt="Nodejs icon">
+                                <img src="./img/technologies/vscode.svg" alt="VSCode icon">
+                                <img src="./img/technologies/npm.svg" alt="npm icon">
+                                <img src="./img/technologies/bash.svg" alt="Bash icon">
+                                <img src="./img/technologies/git.svg" alt="Git icon">
+                            </div>
                         </div>
                         <div class="skills-boxes__tech-list">
-                            <p>I am familiar with</p> <!--I've been working with recently-->
-                            <div class="tech-imgs"></div>
+                            <p>I am working on</p>
+                            <div class="skills-boxes__tech-imgs">
+                                <img src="./img/technologies/express.svg" alt="Express.js icon">
+                                <img src="./img/technologies/mongodb.svg" alt="Mongodb icon">
+                                <img src="./img/technologies/nextjs.svg" alt="Nextjs icon">
+                            </div>
                         </div>
                         <div class="skills-boxes__tech-list">
                             <p>I want to learn</p>
-                            <div class="tech-imgs"></div>
+                            <div class="skills-boxes__tech-imgs">
+                                <img src="./img/technologies/typescript.svg" alt="TypeScript icon">
+                                <img src="./img/technologies/angularjs.svg" alt="Angular icon">
+                                <img src="./img/technologies/react.svg" alt="React icon">
+                            </div>
                         </div>
                     </div>
                     <!--TODO lista wjeżdża pojedyńczo-->
+                    <h3 class="skills-boxes-title">Soft skills:</h3>
                     <div class="skills-boxes__soft">
-                        <h3 class="skills-boxes-title">Soft skills:</h3>
-                        <div class="skills-boxes__soft-box-list">
+                        <div class="skills-boxes__soft-box">
                             <ul class="skills-boxes__soft-box-list">
                                 <li>accuracy and insight with curiosity</li>
                                 <li>communicative</li>
@@ -246,7 +264,7 @@
                             </ul>
                             <ul class="skills-boxes__soft-box-list">
                                 <li>teamwork</li>
-                                <li>the artist's soul</li>
+                                <li>artist's soul</li>
                                 <li>willingness to learn new things</li>
                             </ul>
                         </div>
